--- a/Recursion.ipynb
+++ b/Recursion.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Recursion.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO8MAiiHIiM10EY5HMRDZGn",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMVA2WheXn2CSwi3zFf/oU9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +31,45 @@
         "id": "Hd728QG2jMXT"
       },
       "source": [
-        ""
+        "#factorial function\n",
+        "def factorial(n):\n",
+        "  #base case which gives fixed quantities\n",
+        "  if n==0:\n",
+        "    return 1\n",
+        "  #recursive cases, each time the function is called, the agr smaller by 1 until base case reached\n",
+        "  else:\n",
+        "    return n*factorial(n-1)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "huT4oW80kPaP",
+        "outputId": "2f2a5c9b-d86a-4e56-f833-2506ad621518"
+      },
+      "source": [
+        "factorial(5)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     }
   ]
 }
