--- a/Recursion.ipynb
+++ b/Recursion.ipynb
@@ -6,7 +6,7 @@
       "name": "Recursion.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXi+V+ippDaZLn4QAh3OQa",
+      "authorship_tag": "ABX9TyM3z6nvag+R8SHgxiyd+sIq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,201 @@
         "id": "0iUWvQ9zYaTo"
       },
       "source": [
-        "#file system\n"
+        "#file system\n",
+        "import os.path"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DtBKmj5ca-1N"
+      },
+      "source": [
+        "path = os.getcwd()"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M6rposOsazEp",
+        "outputId": "8499d402-b11d-4001-870f-e54b55fc08ab"
+      },
+      "source": [
+        "#return the size of immediate directory\n",
+        "os.path.getsize(os.getcwd())"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4096"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A-Sg_l8ubo94",
+        "outputId": "0836252e-7f1a-45e0-b968-0e29a025b270"
+      },
+      "source": [
+        "#return true is path is a directory\n",
+        "os.path.isdir(os.getcwd())"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lFF8EiE9b_OY",
+        "outputId": "99220ffb-6c16-40be-a388-e4a184f9d053"
+      },
+      "source": [
+        "#list files in directory\n",
+        "os.listdir(path)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['.config', 'sample_data']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hC2S-5iUcLWq"
+      },
+      "source": [
+        "#implement system\n",
+        "import os\n",
+        "def disk_usage(path):\n",
+        "  #get direct usage\n",
+        "  total = os.path.getsize(path)\n",
+        "\n",
+        "  if os.path.isdir(path):\n",
+        "    for filename in os.listdir(path):\n",
+        "      childpath = os.path.join(path, filename)\n",
+        "      total+=disk_usage(childpath)\n",
+        "  \n",
+        "  print('{0:<7}'.format(total), path)\n",
+        "\n",
+        "  return total"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-QiIa4eGhKNa",
+        "outputId": "0e7f3830-b7ef-4bf8-9d71-f0c4593f1be3"
+      },
+      "source": [
+        "disk_usage(path)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10024   /content/.config/logs/2020.12.21/17.28.47.180010.log\n",
+            "29556   /content/.config/logs/2020.12.21/17.28.10.224796.log\n",
+            "625     /content/.config/logs/2020.12.21/17.29.09.326092.log\n",
+            "389     /content/.config/logs/2020.12.21/17.28.32.541165.log\n",
+            "620     /content/.config/logs/2020.12.21/17.29.09.888329.log\n",
+            "389     /content/.config/logs/2020.12.21/17.28.53.747819.log\n",
+            "45699   /content/.config/logs/2020.12.21\n",
+            "49795   /content/.config/logs\n",
+            "3       /content/.config/.last_opt_in_prompt.yaml\n",
+            "94      /content/.config/configurations/config_default\n",
+            "4190    /content/.config/configurations\n",
+            "134     /content/.config/.last_update_check.json\n",
+            "7       /content/.config/active_config\n",
+            "5       /content/.config/gce\n",
+            "0       /content/.config/config_sentinel\n",
+            "37      /content/.config/.last_survey_prompt.yaml\n",
+            "32      /content/.config/.metricsUUID\n",
+            "58299   /content/.config\n",
+            "1697    /content/sample_data/anscombe.json\n",
+            "930     /content/sample_data/README.md\n",
+            "18289443 /content/sample_data/mnist_test.csv\n",
+            "301141  /content/sample_data/california_housing_test.csv\n",
+            "1706430 /content/sample_data/california_housing_train.csv\n",
+            "36523880 /content/sample_data/mnist_train_small.csv\n",
+            "56827617 /content/sample_data\n",
+            "56890012 /content\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "56890012"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PLsfPR78hjS7"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
