--- a/Recursion.ipynb
+++ b/Recursion.ipynb
@@ -6,7 +6,7 @@
       "name": "Recursion.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM3z6nvag+R8SHgxiyd+sIq",
+      "authorship_tag": "ABX9TyNFaIw5YVPxeefQFH7vHThc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -315,7 +315,9 @@
         "\n",
         "  if os.path.isdir(path):\n",
         "    for filename in os.listdir(path):\n",
+        "      #compose full path to child\n",
         "      childpath = os.path.join(path, filename)\n",
+        "      #recursion to get the usage for each child adds to total\n",
         "      total+=disk_usage(childpath)\n",
         "  \n",
         "  print('{0:<7}'.format(total), path)\n",
